[gd_scene load_steps=28 format=2]

[ext_resource path="res://MainScenes/Hoop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BasicGolemsArea2D.gd" type="Script" id=2]
[ext_resource path="res://Sprite/BasicGolemEnemy.png" type="Texture" id=3]
[ext_resource path="res://Sprite/GolemEnemy.png" type="Texture" id=4]
[ext_resource path="res://Sounds/explosion06.wav" type="AudioStream" id=5]
[ext_resource path="res://Enemies/ObsoletedEnemies/BasicGolem.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walking",
"speed": 6.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Dying",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Spin",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 19.7307, 20.9928 )

[node name="GolemEnemy" type="Node2D"]
position = Vector2( 50, 50 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 6 )
Hoop = ExtResource( 1 )

[node name="GolemSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "walking"
frame = 4
playing = true

[node name="Tween" type="Tween" parent="GolemSprite"]

[node name="RingSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 20 )
animation = "Spin"
frame = 2

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.09728, 0.283254 )
scale = Vector2( 0.654718, 1.20451 )
shape = SubResource( 21 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.36805, -35.21 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="animation_finished" from="GolemSprite" to="." method="Kill_My_Self"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
